rfkill: Use new _send_change_all_event() helper

This fixes problems when the system has a platform rfkill device for
Bluetooth and the Bluetooth adapter's rfkill support somehow got
blocked.

https://bugzilla.gnome.org/show_bug.cgi?id=741675